--- a/src/components/getstart/index.scss
+++ b/src/components/getstart/index.scss
@@ -4,9 +4,19 @@
     text-align: center;
     height: 110vh;
     position: relative;
+    display: flex;
+    justify-content: center;
+    font-family: 'open sans';
+
+    .intro{
+        width: 600px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 
     .imgintro{
-        z-index: 99;
+        width: 100%;
     }
 
     .bg{
@@ -16,5 +26,19 @@
         top: 40%;
         object-fit: cover;
         width: 100%;
+    }
+
+    h1{
+        margin-top: 1em;
+    }
+
+    p{
+        width: 500px;
+        margin-top: 1.5em;
+        margin-bottom: 1.5em;
+    }
+    .index{
+        position: relative;
+        z-index: 100;
     }
 }
