--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -1,7 +1,7 @@
 .header{
     display: flex;
     background-color: hsl(217, 28%, 15%);
-    padding: 60px;
+    padding: 60px 80px;
     font-family: 'raleway';
 
     &__nav{
@@ -13,15 +13,15 @@
 
     ul{
         display: flex;
+        gap: 50px;
     }
     
     li{
         color: rgb(206, 209, 212);
         list-style: none;
-        padding-right: 3em;
         cursor: pointer;
     }
     li:hover{
-        color: rgb(224, 228, 231)
+        color: rgb(97, 210, 255);
     }
 }
