--- a/src/components/button/index.scss
+++ b/src/components/button/index.scss
@@ -2,7 +2,7 @@ button{
     width: 40%;
     height: 3.5em;
     border-radius: 25px;
-    background: linear-gradient(90deg, hsl(198, 60%, 50%) 3%, hsl(176, 68%, 64%) 100%);
+    background: linear-gradient(90deg,hsl(176, 68%, 64%) , hsl(198, 60%, 50%) 90%);
     color: white;
     cursor: pointer;
     transition: 1s;
