--- a/src/components/getstart/index.scss
+++ b/src/components/getstart/index.scss
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: center;
     font-family: 'open sans';
+    position: relative;
 
     .intro{
         width: 600px;
@@ -23,8 +24,7 @@
         position: absolute;
         left: 0;
         bottom: 0;
-        top: 40%;
-        object-fit: cover;
+        object-fit:contain;
         width: 100%;
     }
 
