--- a/src/components/card-adv/index.scss
+++ b/src/components/card-adv/index.scss
@@ -3,7 +3,7 @@
     width: 400px;
     text-align: center;
     margin: 4rem 2rem;
-    color: aliceblue;
+    color: white;
     min-width: 30%;
 
     img{
