--- a/src/views/advant/index.scss
+++ b/src/views/advant/index.scss
@@ -1,8 +1,10 @@
+@use '../../sass/variables.scss' as *;
+
 .advants{
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-    background-color: hsl(218, 28%, 13%);
+    background-color: $dark_blue_mainbg;
     font-family: 'open sans';
 }
