--- a/src/views/stayprod/index.scss
+++ b/src/views/stayprod/index.scss
@@ -5,19 +5,20 @@
     padding-top: 5rem;
     padding-bottom: 6rem;
     display: flex;
+    flex-wrap: wrap;
     padding-left: 7%;
     padding-right: 7%;
     gap: 10%;
     align-items: center;
     color: white;
-    font-family:'open sans';
+    overflow: hidden;
 
     h1{
         margin-bottom: 1rem;
-        width: 25vw;
+        width: 20vw;
     }
     p{
-        max-width: 55vw;
+        max-width: 25vw;
         padding-bottom: 2rem;
     }
     a{
