--- a/src/views/footer/index.scss
+++ b/src/views/footer/index.scss
@@ -2,5 +2,58 @@
 
 .footer{
     background-color: $dark_blue_footer ;
-    padding: 6rem;
+    position: relative;
+    padding: 5rem 6rem;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    &__content{
+        margin-top: 18vh;
+    }
+
+    .contacts{
+        padding-right: 9vw;
+    }
+
+   .flex{
+    display: flex;
+   }
+
+   .column{
+    flex-direction: column;
+    gap: 1rem;
+   }
+
+    
+   nav{
+    padding-left: 4vw;
+   }
+   a{
+        color: white;
+        text-decoration: none;
+
+        &:hover{
+            color: hsl(176, 68%, 64%);            
+        }
+    }
+    li{
+        list-style: none;
+        padding-bottom: 1rem;
+        font-size: 1.1rem;
+    }
+
+    &__contacts{
+        display: flex;
+        padding-top: 2rem;
+
+        img{
+            padding-right: 1rem;
+            padding-top: 2%;
+            width: fit-content;
+            object-fit: contain;
+            align-self: flex-start;
+        }
+    }
 }
