--- a/src/components/feedback-cards/index.scss
+++ b/src/components/feedback-cards/index.scss
@@ -29,4 +29,8 @@
             color: rgba(236, 229, 229, 0.774);
         }
     }
+
+    @media screen and (max-width:668px) {
+        max-width: 90%;
+    }
 }
