--- a/src/components/get_start/index.scss
+++ b/src/components/get_start/index.scss
@@ -1,13 +1,15 @@
 @use '../../sass/variables.scss' as *;
 
 .get-start{
-    width: 50%;
+    width: 50vw;
+    min-width: 400px;
     background-color: $dark_blue;
-    padding: 2rem 4rem;
+    padding: 2rem 3rem;
+    display: block;
     color: white;
     text-align: center;
     position: absolute;
-    right: 20%;
+    margin: auto;
     bottom: -8.5rem;
     z-index: 100;
     box-shadow: rgba(26, 25, 25, 0.616) 6px 6px;
@@ -24,12 +26,43 @@
 
     input{
         border-radius: 25px;
-        width: 32vw;
+        width: 65%;
         padding-left: 2rem;
+        padding-right: 2rem;
 
         &:focus{
             outline: 0;
         }
     }
 
+    @media screen and ( max-width:668px ) {
+        width: 95vw;
+        text-align: center;
+        padding: 0;
+        min-width: 0;
+        
+        h2{
+            padding: 1.5rem 1rem;
+            margin: auto;
+            font-size: 1.2rem;
+            width: 290px;
+        }
+        
+        p{
+            padding: 0 1.5rem;
+        }
+
+        input{
+            padding: 1rem;
+            width: 80%;
+            margin-bottom: 1rem;
+        }
+
+        form{
+            margin-top: 1rem;
+            flex-direction: column;
+            align-items: center;
+            padding-bottom: 2rem;
+        }
+    }
 }
