--- a/src/views/Intro/index.scss
+++ b/src/views/Intro/index.scss
@@ -4,7 +4,7 @@
     background-color: $dark_blue ;
     color: white;
     text-align: center;
-    height: 110vh;
+    height: 100vh;
     position: relative;
     display: flex;
     justify-content: center;
@@ -42,5 +42,20 @@
     .index{
         position: relative;
         z-index: 100;
+    }
+
+    @media screen and (max-width:668px) {
+        .imgintro{
+            width: 90%;
+        }
+
+        .intro{
+            width: 99vw;
+            margin-top: 2rem;
+        }
+
+        p{
+            width: 90%;
+        }
     }
 }
