--- a/src/views/feedback/index.scss
+++ b/src/views/feedback/index.scss
@@ -2,6 +2,7 @@
 
 .feedbacks{
     display: flex;
+    flex-wrap: wrap;
     position: relative;
     justify-content: space-around;
     background-color: $dark_blue_mainbg ;
@@ -12,5 +13,10 @@
         position: absolute;
         left: 10%;
         z-index: 0;
+    }
+
+    @media screen and (max-width:668px) {
+        padding-top: 3rem;
+        padding-bottom: 26rem;
     }
 }
