--- a/src/views/stayprod/index.scss
+++ b/src/views/stayprod/index.scss
@@ -5,7 +5,6 @@
     padding-top: 5rem;
     padding-bottom: 6rem;
     display: flex;
-    flex-wrap: wrap;
     padding-left: 7%;
     padding-right: 7%;
     gap: 10%;
@@ -18,7 +17,7 @@
         width: 20vw;
     }
     p{
-        max-width: 25vw;
+        width: 25vw;
         padding-bottom: 2rem;
     }
     a{
@@ -28,5 +27,32 @@
             color: hsl(176, 59%, 58%);
         }
     }
+    
+    @media screen and (max-width:668px) {
+        justify-content: center;
+        flex-direction: column;
+        padding-left: 2%;
+        padding-right: 2%;
         
+        #img{
+            width: 100%;
+        }
+
+        h1{
+            padding-top: 1rem;
+            text-align: center;
+            width: 100vw;
+            font-size: 1.2rem;
+        }
+        p{
+            width: 90vw;
+            font-size: 0.9rem;
+            padding: 0 5% 5%;
+        }
+        
+        a{
+            margin-top: 1rem;
+            padding-left: 5%;
+        }
+    }
 }
