--- a/src/components/get_start/index.scss
+++ b/src/components/get_start/index.scss
@@ -29,6 +29,7 @@
         width: 65%;
         padding-left: 2rem;
         padding-right: 2rem;
+        border: 0;
 
         &:focus{
             outline: 0;
