--- a/src/components/get_start/index.scss
+++ b/src/components/get_start/index.scss
@@ -30,6 +30,7 @@
         padding-left: 2rem;
         padding-right: 2rem;
         border: 0;
+        margin-right: 2px;
 
         &:focus{
             outline: 0;
